--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
+  "version": "1.1.0-rc",
   "workspaces": {
     "packages": [
       "core",
