Remove jcenter repository in buildscript

--- a/core/android/build.gradle
+++ b/core/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext.defaultKotlinVersion = '1.3.50'
 
     repositories {
-        jcenter()
+        mavenCentral()
         maven { url 'https://maven.google.com' }
     }
     dependencies {
